Add `UID` and `GID` arguments to Dockerfile
`UID` and `GID` args can now be set during build,
so following the example command in the README should fix
[#2](https://tangled.sh/@tangled.sh/knot-docker/issues/2)
by providing a `UID` and `GID` that exist on the host
so that the directories owned by git in the container
can be bind mounted on the host.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 services:
   knot:
-    build: .
+    build:
+      context: .
+      args:
+        UID: 1000
+        GID: 1000
     environment:
       KNOT_SERVER_HOSTNAME: ${KNOT_SERVER_HOSTNAME}
       KNOT_SERVER_OWNER: ${KNOT_SERVER_OWNER}
