--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,28 +10,11 @@ services:
       KNOT_SERVER_OWNER: ${KNOT_SERVER_OWNER}
       KNOT_SERVER_DB_PATH: /app/knotserver.db
       KNOT_REPO_SCAN_PATH: /home/git/repositories
-      KNOT_SERVER_INTERNAL_LISTEN_ADDR: localhost:5444
+      KNOT_SERVER_INTERNAL_LISTEN_ADDR: 0.0.0.0:5555
     volumes:
       - ./keys:/etc/ssh/keys
       - ./repositories:/home/git/repositories
       - ./server:/app
     ports:
-      - "5555:5555"
       - "2222:22"
     restart: always
-  frontend:
-    image: caddy:alpine
-    command: >
-      caddy
-      reverse-proxy
-      --from ${KNOT_SERVER_HOSTNAME}
-      --to knot:5555
-    depends_on:
-      - knot
-    ports:
-      - ${KNOT_SERVER_PORT:-443}:443
-      - ${KNOT_SERVER_PORT:-443}:443/udp
-    volumes:
-      - ./caddy_data:/data
-    restart: always
-    profiles: ["caddy"]
